--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1 class="page-title">Taskinator</h1>
+        <p>Click the button below to add a new task!</p>
+        <button class="btn" >Add Task</button>
+    </header>
     <main></main>
     <footer></footer>
     <script src="assets/js/script.js"></script>
