--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <p>Click the button below to add a new task!</p>
         <button class="btn" >Add Task</button>
     </header>
-    <main></main>
+    <main class = "page-content">
+        <section class = "task-list-wrapper">
+            <h2 class = "list-title">Tasks To Do</h2>
+            <ul class = "task-list">
+                <li class = "task-item">A task is going to be added soon!</li>
+            </ul>
+        </section>
+    </main>
     <footer></footer>
     <script src="assets/js/script.js"></script>
 </body>
