--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        &copy;2020 by Taskinator
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
